[package]
name = "qlty-history"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
num_cpus.workspace = true
rayon.workspace = true
regex.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true